# stay-awake

./: BUILD_GUIDE.md  CHANGELOG.md  COMMITS.md  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  RELEASE.md  USAGE_GUIDE.md  build_exe.py  cli.py  config.example.json  config.py  core.py  gui.py  main.py  modes.py  pyproject.toml  test_basic.py
.github/workflows/: build-release.yml  test.yml
