[project]
name = "njstayawake"
version = "1.0.0"
description = "Prevent your computer from going to sleep with configurable activity simulation"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Nanthakumar J J", email = "jjnanthakumar477@gmail.om"}
]
license = {text = "MIT"}
keywords = ["njstayawake", "stay-awake", "prevent-sleep", "mouse-mover", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]
gui = [
    "pyinstaller>=5.0",
]

[project.scripts]
njstayawake = "cli:main"
njstayawake-gui = "gui:main"

[project.urls]
Homepage = "https://github.com/jjnanthakumar/njstayawake"
Repository = "https://github.com/jjnanthakumar/njstayawake"
Issues = "https://github.com/jjnanthakumar/njstayawake/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "config", "core", "modes", "gui"]
